--- a/challenges/frozen-noodle/index.css
+++ b/challenges/frozen-noodle/index.css
@@ -5,10 +5,16 @@
     color: var(--secondary)
 }
 
-h1{
-    font-family: 'Arvo', serif;
+h1, h2, h3{
+    font-family: 'Antonio', sans-serif;
+}
+h2{
+    font-size: 45px;
 }
 
+h3{
+    font-size: 25px;
+}
 .wrapper{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -24,7 +30,7 @@ h1{
     font-size: 6.5rem;
     text-transform: uppercase;
     text-align: right;
-    line-height: 1rem;
+    line-height: 2rem;
 }
 
 .header-text:nth-child(1){
@@ -36,3 +42,53 @@ h1{
     padding: 4.5rem;
 }
 
+.btn-primary{
+    background-color: var(--primary);
+    color: var(--secondary)
+}
+
+.btn-primary:hover{
+    background-color: var(--secondary);
+    color: var(--primary);
+}
+
+.btn-lg{
+    font-size: 20px;
+    padding: 1.5em;
+}
+btn{
+    font-size: 18px;
+    padding: 1em;
+}
+
+.btn-100{
+    min-width: 100%;
+}
+/* Products */
+
+.wrapper-food-display{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 1.5rem;
+    align-items: center;
+}
+
+.food-display{
+    padding: 2rem;
+}
+
+.food-display > img {
+    min-width: 400px;
+    width: 100%;
+}
+/* Screen Size Adjustments */
+@media screen and (max-width: 927px){
+    .wrapper{
+        grid-template-columns: 1fr;
+    }
+}
+.header-text-group{
+    margin-left: 0;
+    padding: 4.5rem;
+    text-align: center;
+}
